@@ -1,3 +1,8 @@
+2004-01-08  Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* Makefile.am: Build librtems$(LIB_VARIANT).a instead of
+	$(ARCH)/librtems.a.
+
 2004-01-07  Ralf Corsepius <corsepiu@faw.uni-ulm.de>
 
 	* Makefile.am: Build library using EXTRA_LIBRARIES and automake rules.
